--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
   },
   "homepage": "https://github.com/bedri/coin-js-lib#readme",
   "dependencies": {
-    "dash": "^3.14.1"
+    "@dashevo/dashcore-lib": "^0.19.0",
+    "bitcoind-rpc-dash": "^1.0.1",
+    "bitcoind-rpc-pivx": "^0.7.1",
+    "dash": "^3.14.1",
+    "dotenv": "^8.2.0",
+    "fs": "0.0.1-security",
+    "level": "^6.0.1"
   }
 }
